Revisit Quotas (#172)
Having 2 APIs and doing a join in client code feels messy, so do the
aggregation in the API.
